# emulator-rs

./: Cargo.toml  README.md
src/frontend/: mod.rs
src/frontend/rv32i/: cpu.rs  instructions.rs  mem.rs  mod.rs  registers.rs
src/frontend/rv32i/decoder/: instruction_formats.rs  instructions.rs  mod.rs
tests/: compliance.rs
tests/rv32i-compliance/: add  addi  and  andi  auipc  beq  bge  bgeu  blt  bltu  bne  fence_i  jal  jalr  lb  lbu  lh  lhu  lui  lw  or  ori  sh  simple  sll  slli  slt  slti  sltiu  sltu  sra  srai  srl  srli  sub  sw  xor  xori
