[package]
name = "emulator-rs"
version = "0.1.0"
authors = ["Carl Hurd <carl@basilisklabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmas-elf = "0.7.0"

[[bin]]
name = "test-binary"
path = "src/bin/main.rs"